# rf-mapper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPER_SETUP.md  Dockerfile.full  Dockerfile.light  LICENSE  MANIFEST.in  README.md  SECURITY.md  WHITEBOX-TOOLS.md  build_and_package.bat  build_full.bat  build_full.py  build_light.bat  build_lite.py  dev_setup_launch.bat  full.spec  launch_app.bat  light.spec  precommit.sh  pyproject.toml  requirements-runtime.txt  requirements.txt  requirements_lock.txt  set_onyx_mode_full.py  set_onyx_mode_lite.py
.github/workflows/: ci-build.yml  ci-hash-check.yml
docs/: ARCHITECTURE.md  Makefile  PHYSICS-SPEC.md  USAGE_GUIDE.md  api_documentation.md  build_documentation.md  physics_models.md  quick_help.md  tooltip_improvements.md
docs/analysis/: 2025-06-14_third_pass.md
docs/user_guides/: common_workflows.md
src/sim_rf_map/: MANIFEST.in  __init__.py  __main__.py  _loader.py  attenuation_profiles.py  build.py  build_release.py  cli.py  cli_batch_runner.py  config_validator.py  crash_recovery.py  debug_view.py  decode_assets.py  depth_midas.py  depth_physics.py  dev_setup.py  env_mode.py  error_handler.py  export_tools.py  fresnel_violation_map.py  fresnel_zone.py  gui_tx_panel.py  knife_edge.py  logging_config.py  main.py  memory_manager.py  (+22 more)
tests/: test_build.py  test_build_scripts.py  test_cli.py  test_cli_batch_runner_comprehensive.py  test_cli_comprehensive.py  test_cli_entrypoint.py  test_cli_export.py  test_coords.py  test_dem_utils.py  test_e2e.py  test_entrypoint.py  test_entrypoints.py  test_export_roundtrip.py  test_export_tools.py  test_export_wizard.py  test_fresnel_zone.py  test_gui_overlay_export.py  test_gui_smoke.py  test_high_physics_full.py  test_integration.py  test_knife_edge.py  test_logging.py  test_meta_writer.py  test_midas.py  test_model_path.py  test_onnx_wrapper.py  test_overlay_controller.py  test_overlay_registry.py  test_physics_init.py  test_physics_smoke.py  test_physics_validation.py  test_propagation_math.py  test_propagation_smoke.py  test_propagator.py  test_registry_paths.py  test_rf_functions.py  test_session_io.py  test_signal_path_plot.py  test_signal_path_tracer.py  test_smoke.py  (+2 more)
weights/: README.md
(+78 files in other folders)
